2007-08-19  Mario Torre  <neugens@limasoftware.net>

	* gnu/javax/sound/sampled/gstreamer/io/GstAudioFileReader.java: 
	(getAudioFileFormat (File)): method implemented.
	(getAudioFileFormat (InputStream)): likewise.
	(getAudioFileFormat(InputStream, String)): new method.
	(getAudioInputStream): better exception handling.
	* gnu/javax/sound/sampled/gstreamer/io/GstAudioFileReaderNativePeer.java
	(getAudioFormat): added basic extension detection for known files.
	* gnu/javax/sound/sampled/gstreamer/GStreamerMixer.java:
	(BASIC_FORMATS): removed, unused.
	(GST_TYPE_NAME): new constant.
	(GST_FILE_EXTENSION): likewise.

2007-08-19  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* resource/META-INF/services/javax.sound.sampled.spi.AudioFileReader:
	Removed.
	* resource/META-INF/services/javax.sound.sampled.spi.MixerProvider:
	Likewise.
	* resource/META-INF/services/.cvsignore: Updated to reflect this.
	
2007-08-19  Mario Torre  <neugens@limasoftware.net>

	* native/jni/gstreamer-peer/gst_native_pipeline.c:
	(init_pointer_IDs):	fix typo that prevents compilation on 64 bit systems.

2007-08-19  Mario Torre  <neugens@limasoftware.net>

	* resource/META-INF/services/javax.sound.sampled.spi.MixerProvider:
	regenerated to avoid listing by default of the
	gnu.javax.sound.sampled.gstreamer.GStreamerMixerProvider class, as the
	GStreamer Sound peer is not enabled unless specified at configure time.

2007-08-18  Mario Torre  <neugens@limasoftware.net>

	* examples/gnu/classpath/examples/sound/AudioPlayerSample.java: new file.
	* gnu/javax/sound/sampled/gstreamer/GStreamerMixer.java: removed
	unused import.
	* gnu/javax/sound/sampled/gstreamer/io/GstAudioFileWriter.java: likewise.
	* gnu/javax/sound/sampled/gstreamer/io/GstAudioFileReaderNativePeer.java: 
	(gstreamer_get_audio_format_stream): changed signature tu accept a Pointer
	object instead of a BufferedInputStream.
	(GstHeader): 
	(getAudioFormat(InputStream, GstHeader)): new private method.