@@ -1,3 +1,11 @@
+2007-08-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* vm/reference/java/lang/VMClass.java:
+	(getCanonicalName(Class)): Fix handling of member
+	classes so we don't fall out of the if block.
+	(getSimpleName(Class)): Handle class names which include
+	the $ sign to break up anonymous/inner/member classes.
+
 2007-08-19  Mario Torre  <neugens@limasoftware.net>
 
 	* gnu/javax/sound/sampled/gstreamer/io/GstAudioFileReader.java: 
@@ -11,7 +19,7 @@
 	(BASIC_FORMATS): removed, unused.
 	(GST_TYPE_NAME): new constant.
 	(GST_FILE_EXTENSION): likewise.
-
+	
 2007-08-19  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* resource/META-INF/services/javax.sound.sampled.spi.AudioFileReader:
